// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<label
  className="a b c d"
>
  FormLabel
</label>
`;

exports[`should render 2`] = `
"
.a {
  font-size: 0.8666666666666667em
}

.b {
  display: block
}

.c {
  margin-bottom: 0.2em
}

.d {
  color: #333
}
"
`;

exports[`should render hidden 1`] = `
<label
  className="a b c d"
>
  FormLabel
</label>
`;

exports[`should render hidden 2`] = `
"
.a {
  font-size: 0.8666666666666667em
}

.b {
  display: none
}

.c {
  margin-bottom: 0.2em
}

.d {
  color: #333
}
"
`;
